Refactor pom.xml for RESTEasy integration tests
Updated project details and dependencies in pom.xml.